--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Submission: Membuat Aplikasi Web dengan ES6, Custom Element, NPM, Webpack, dan AJAX",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
